fixed small grid layout issue

--- a/src/components/fanDuelSections/f2p/f2p.module.scss
+++ b/src/components/fanDuelSections/f2p/f2p.module.scss
@@ -28,7 +28,7 @@
   top: -140px;
   display: grid;
   grid-template-columns: 250px 250px 214px 250px;
-  grid-template-rows: 140px 358px 100px 68px 150px 100px;
+  grid-template-rows: 140px 358px 100px 68px 110px 100px;
   gap: 40px;
   a {
     text-decoration: none;
